// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages globalSettings should render correctly with some saved passenger types 1`] = `
<BaseLayout
  description="View and access your settings in one place."
  showNavigation={true}
  title="Operator Settings"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-quarter"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-three-quarters"
        >
          <h1
            className="govuk-heading-m"
          >
            Settings overview
          </h1>
          <p
            className="govuk-body-m"
          >
            Operators may customise the following definitions relevant to their fares or choose to use default settings.
          </p>
          <hr
            className="govuk-section-break govuk-section-break--l govuk-section-break--visible"
          />
          <SettingOverview
            count={4}
            description="Define age range and required proof documents of your passengers as well as passenger groups"
            name="Passenger types"
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;

exports[`pages globalSettings should render correctly with zero saved passenger types 1`] = `
<BaseLayout
  description="View and access your settings in one place."
  showNavigation={true}
  title="Operator Settings"
>
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <div
        className="govuk-grid-row"
      >
        <div
          className="govuk-grid-column-one-quarter"
        >
          <div
            className="app-pane__subnav"
          >
            <nav
              aria-labelledby="app-subnav-heading"
              className="app-subnav"
            >
              <h2
                className="govuk-visually-hidden"
                id="app-subnav-heading"
              >
                Pages in this section
              </h2>
              <ul
                className="app-subnav__section"
              >
                <li
                  className="app-subnav__section-item app-subnav__section-item--current"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Settings overview
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Passenger types
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Service day end
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Purchase methods
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Time restrictions
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Multi-operator groups
                  </a>
                </li>
                <li
                  className="app-subnav__section-item"
                >
                  <a
                    className="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline"
                    href="/globalSettings"
                  >
                    Travel Zones
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          className="govuk-grid-column-three-quarters"
        >
          <h1
            className="govuk-heading-m"
          >
            Settings overview
          </h1>
          <p
            className="govuk-body-m"
          >
            Operators may customise the following definitions relevant to their fares or choose to use default settings.
          </p>
          <hr
            className="govuk-section-break govuk-section-break--l govuk-section-break--visible"
          />
          <SettingOverview
            count={0}
            description="Define age range and required proof documents of your passengers as well as passenger groups"
            name="Passenger types"
          />
        </div>
      </div>
    </main>
  </div>
</BaseLayout>
`;
